tests/integration/errors/test_address_of_non_native.sn
# Error test: addressOf() outside native function context

fn main(): void =>
  var x: int = 42
  var ptr: *int = addressOf(x)
  print($"{ptr}")
